tests/codegen/fail/input_object/struct/derive_no_underscore.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
struct Object {
    #[graphql(name = "__test")]
    test: String,
}

fn main() {}
